cv.pdf, better mobile

--- a/app/todo.txt
+++ b/app/todo.txt
@@ -1,5 +1,7 @@
 todo
-- контраст на языках
-- мобилка
-- all skills
-- придумать как телефон сделать
+[-] мобилка
+[-] all skills
+[-] придумать как телефон сделать
+[-] добавить мяса в текст
+[+] контраст на языках
+[+] pdf
