--- a/app/todo.txt
+++ b/app/todo.txt
@@ -1,5 +1,6 @@
 todo
-[-] мобилка
+[-] мобилка -фотка
+[-] мобилка -темы селектор
 [-] all skills
 [-] придумать как телефон сделать
 [-] добавить мяса в текст
