--- a/app/todo.txt
+++ b/app/todo.txt
@@ -1,8 +1,8 @@
 todo
-[-] мобилка -фотка
-[-] мобилка -темы селектор
 [-] all skills
 [-] придумать как телефон сделать
 [-] добавить мяса в текст
+[+] мобилка -фотка
+[+] мобилка -темы селектор
 [+] контраст на языках
 [+] pdf
